[tool.poetry]
name = "uu-hackathon"
version = "0.1.0"
description = ""
authors = ["Niels Eigenraam <c.eigenraam@minfin.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
pytrends = "^4.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
