[tool.poetry]
name = "uu-hackathon"
version = "0.1.0"
description = ""
authors = ["Niels Eigenraam <c.eigenraam@minfin.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
pytrends = "^4.7.2"
plac = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
pyls-mypy = "^0.1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
